# msa

./: CMakeLists.txt  LICENSE
include/msa/: account.h  account_manager.h  compact_token.h  device_auth.h  legacy_network.h  legacy_token.h  login_manager.h  msa.h  network.h  parse_exception.h  scope.h  simple_storage_manager.h  simple_token_cache.h  storage_manager.h  token.h  token_cache.h  token_response.h  xml_utils.h
include/msa/network/: account_token_request.h  crypto_utils.h  curl.h  device_add_request.h  device_authenticate_request.h  parse_exception.h  request.h  request_utils.h  security_token_request.h  server_config.h  server_time.h  service_exception.h  soap_exception.h  xml_sign_context.h  xml_utils.h
src/: account.cpp  account_manager.cpp  compact_token.cpp  device_auth.cpp  legacy_network.cpp  legacy_token.cpp  login_manager.cpp  msa.cpp  network.cpp  simple_storage_manager.cpp  simple_token_cache.cpp  token.cpp  token_response.cpp  xml_utils.cpp
src/network/: account_token_request.cpp  crypto_auto_helper.h  crypto_utils.cpp  device_add_request.cpp  device_authenticate_request.cpp  request.cpp  request_utils.cpp  security_token_request.cpp  server_config.cpp  server_time.cpp  service_exception.cpp  soap_exception.cpp  xml_sign_context.cpp
